--- a/azure-pipelines/ddl-deploy.yml
+++ b/azure-pipelines/ddl-deploy.yml
@@ -54,6 +54,7 @@ stages:
               goldCatalog: $(catalog_gold)
               platinumCatalog: $(catalog_platinum)
               storageAccountName: $(storage_account)
+              storageConnectorId: $(storage_connector_id)
               databricksHost: $(databricks_host)
               enableCdfForRuntime: true
               enableCdfForMetadata: false
@@ -84,6 +85,7 @@ stages:
               goldCatalog: $(catalog_gold)
               platinumCatalog: $(catalog_platinum)
               storageAccountName: $(storage_account)
+              storageConnectorId: $(storage_connector_id)
               databricksHost: $(databricks_host)
               enableCdfForRuntime: true
               enableCdfForMetadata: false
@@ -120,6 +122,7 @@ stages:
                     goldCatalog: $(catalog_gold)
                     platinumCatalog: $(catalog_platinum)
                     storageAccountName: $(storage_account)
+              storageConnectorId: $(storage_connector_id)
                     databricksHost: $(databricks_host)
                     enableCdfForRuntime: true
                     enableCdfForMetadata: false
@@ -155,6 +158,7 @@ stages:
                     goldCatalog: $(catalog_gold)
                     platinumCatalog: $(catalog_platinum)
                     storageAccountName: $(storage_account)
+              storageConnectorId: $(storage_connector_id)
                     databricksHost: $(databricks_host)
                     enableCdfForRuntime: true
                     enableCdfForMetadata: false
