--- a/azure-pipelines/templates/terraform-deploy-steps.yml
+++ b/azure-pipelines/templates/terraform-deploy-steps.yml
@@ -70,10 +70,12 @@ steps:
     displayName: 'Setup Databricks Authentication'
     inputs:
       azureSubscription: ${{ parameters.serviceConnection }}
+      addSpnToEnvironment: true
       scriptType: 'bash'
       scriptLocation: 'inlineScript'
       inlineScript: |
         # Get Azure credentials
+        echo "SP ID - $servicePrincipalId"
         export ARM_CLIENT_ID=$(az ad sp show --id $servicePrincipalId --query appId -o tsv)
         export ARM_TENANT_ID=$(az account show --query tenantId -o tsv)
         export ARM_SUBSCRIPTION_ID=$(az account show --query id -o tsv)
@@ -83,6 +85,7 @@ steps:
         echo "##vso[task.setvariable variable=ARM_CLIENT_ID]$ARM_CLIENT_ID"
         echo "##vso[task.setvariable variable=ARM_TENANT_ID]$ARM_TENANT_ID"
         echo "##vso[task.setvariable variable=ARM_SUBSCRIPTION_ID]$ARM_SUBSCRIPTION_ID"
+        echo "##vso[task.setvariable variable=ARM_CLIENT_SECRET]$servicePrincipalKey"
         echo "##vso[task.setvariable variable=ARM_USE_MSI]true"
         
         # Log configuration (without sensitive data)
@@ -98,6 +101,7 @@ steps:
         # Export ARM credentials for Terraform backend
         export ARM_USE_MSI=true
         export ARM_SUBSCRIPTION_ID=$ARM_SUBSCRIPTION_ID
+        export ARM_CLIENT_SECRET=$ARM_CLIENT_SECRET
         export ARM_TENANT_ID=$ARM_TENANT_ID
         export ARM_CLIENT_ID=$ARM_CLIENT_ID
         
@@ -112,12 +116,14 @@ steps:
           -backend-config="use_msi=true" \
           -backend-config="subscription_id=$ARM_SUBSCRIPTION_ID" \
           -backend-config="tenant_id=$ARM_TENANT_ID" \
-          -backend-config="client_id=$ARM_CLIENT_ID"
+          -backend-config="client_id=$ARM_CLIENT_ID" \
+          -backend-config="use_azuread_auth=true"
 
   - task: AzureCLI@2
     displayName: 'Terraform Validate'
     inputs:
       azureSubscription: ${{ parameters.serviceConnection }}
+      addSpnToEnvironment: true
       scriptType: 'bash'
       scriptLocation: 'inlineScript'
       inlineScript: |
@@ -126,6 +132,7 @@ steps:
         export ARM_SUBSCRIPTION_ID=$(ARM_SUBSCRIPTION_ID)
         export ARM_TENANT_ID=$(ARM_TENANT_ID)
         export ARM_CLIENT_ID=$(ARM_CLIENT_ID)
+        export ARM_CLIENT_SECRET=$(ARM_CLIENT_SECRET))
         export DATABRICKS_HOST=${{ parameters.databricksHost }}
         
         # Validate Terraform configuration
@@ -136,6 +143,7 @@ steps:
     displayName: 'Terraform Plan'
     inputs:
       azureSubscription: ${{ parameters.serviceConnection }}
+      addSpnToEnvironment: true
       scriptType: 'bash'
       scriptLocation: 'inlineScript'
       inlineScript: |
@@ -144,6 +152,7 @@ steps:
         export ARM_SUBSCRIPTION_ID=$(ARM_SUBSCRIPTION_ID)
         export ARM_TENANT_ID=$(ARM_TENANT_ID)
         export ARM_CLIENT_ID=$(ARM_CLIENT_ID)
+        export ARM_CLIENT_SECRET=$(ARM_CLIENT_SECRET))
         export DATABRICKS_HOST=${{ parameters.databricksHost }}
         
         # Plan Terraform changes
