--- a/azure-pipelines/templates/terraform-deploy-steps.yml
+++ b/azure-pipelines/templates/terraform-deploy-steps.yml
@@ -74,36 +74,24 @@ steps:
       scriptType: 'bash'
       scriptLocation: 'inlineScript'
       inlineScript: |
-        # Get Azure credentials
-        echo "SP ID - $servicePrincipalId"
-        export ARM_CLIENT_ID=$(az ad sp show --id $servicePrincipalId --query appId -o tsv)
-        export ARM_TENANT_ID=$(az account show --query tenantId -o tsv)
+        # Export Azure credentials for Terraform - using service principal, not MSI
+        export ARM_CLIENT_ID=$servicePrincipalId
+        export ARM_CLIENT_SECRET=$servicePrincipalKey
+        export ARM_TENANT_ID=$tenantId
         export ARM_SUBSCRIPTION_ID=$(az account show --query id -o tsv)
         
-        # Set Databricks environment variables
+        # Set environment variables for subsequent tasks
         echo "##vso[task.setvariable variable=DATABRICKS_HOST]${{ parameters.databricksHost }}"
-        echo "##vso[task.setvariable variable=ARM_CLIENT_ID]$ARM_CLIENT_ID"
-        echo "##vso[task.setvariable variable=ARM_TENANT_ID]$ARM_TENANT_ID"
-        echo "##vso[task.setvariable variable=ARM_SUBSCRIPTION_ID]$ARM_SUBSCRIPTION_ID"
+        echo "##vso[task.setvariable variable=ARM_CLIENT_ID]$servicePrincipalId"
         echo "##vso[task.setvariable variable=ARM_CLIENT_SECRET]$servicePrincipalKey"
-        echo "##vso[task.setvariable variable=ARM_USE_MSI]true"
+        echo "##vso[task.setvariable variable=ARM_TENANT_ID]$tenantId"
+        echo "##vso[task.setvariable variable=ARM_SUBSCRIPTION_ID]$(az account show --query id -o tsv)"
         
         # Log configuration (without sensitive data)
         echo "Environment: ${{ parameters.environment }}"
-        echo "Catalog: ${{ parameters.orcaCatalog }}"
-        echo "Metadata Schema: ${{ parameters.orcaMetadataSchema }}"
-        echo "Runtime Schema: ${{ parameters.orcaRuntimeSchema }}"
-
         echo "Backend Storage: $(terraform_storage_account)"
         echo "Backend Container: $(terraform_container)"
         echo "Backend RG: $(terraform_resource_group)"
-        
-        # Export ARM credentials for Terraform backend
-        export ARM_USE_MSI=true
-        export ARM_SUBSCRIPTION_ID=$ARM_SUBSCRIPTION_ID
-        export ARM_CLIENT_SECRET=$ARM_CLIENT_SECRET
-        export ARM_TENANT_ID=$ARM_TENANT_ID
-        export ARM_CLIENT_ID=$ARM_CLIENT_ID
         
         # Initialize Terraform with Azure backend
         echo "Initializing Terraform with Azure backend..."
@@ -112,12 +100,7 @@ steps:
           -backend-config="resource_group_name=$(terraform_resource_group)" \
           -backend-config="storage_account_name=$(terraform_storage_account)" \
           -backend-config="container_name=$(terraform_container)" \
-          -backend-config="key=orca-ddl/${{ parameters.environment }}/terraform.tfstate" \
-          -backend-config="use_msi=true" \
-          -backend-config="subscription_id=$ARM_SUBSCRIPTION_ID" \
-          -backend-config="tenant_id=$ARM_TENANT_ID" \
-          -backend-config="client_id=$ARM_CLIENT_ID" \
-          -backend-config="use_azuread_auth=true"
+          -backend-config="key=orca-ddl/${{ parameters.environment }}/terraform.tfstate"
 
   - task: AzureCLI@2
     displayName: 'Terraform Validate'
@@ -127,12 +110,11 @@ steps:
       scriptType: 'bash'
       scriptLocation: 'inlineScript'
       inlineScript: |
-        # Export ARM credentials for Terraform
-        export ARM_USE_MSI=true
-        export ARM_SUBSCRIPTION_ID=$(ARM_SUBSCRIPTION_ID)
-        export ARM_TENANT_ID=$(ARM_TENANT_ID)
-        export ARM_CLIENT_ID=$(ARM_CLIENT_ID)
-        export ARM_CLIENT_SECRET=$(ARM_CLIENT_SECRET))
+        # Export Azure credentials for Terraform
+        export ARM_CLIENT_ID=$servicePrincipalId
+        export ARM_CLIENT_SECRET=$servicePrincipalKey
+        export ARM_TENANT_ID=$tenantId
+        export ARM_SUBSCRIPTION_ID=$(az account show --query id -o tsv)
         export DATABRICKS_HOST=${{ parameters.databricksHost }}
         
         # Validate Terraform configuration
@@ -147,31 +129,30 @@ steps:
       scriptType: 'bash'
       scriptLocation: 'inlineScript'
       inlineScript: |
-        # Export ARM credentials for Terraform
-        export ARM_USE_MSI=true
-        export ARM_SUBSCRIPTION_ID=$(ARM_SUBSCRIPTION_ID)
-        export ARM_TENANT_ID=$(ARM_TENANT_ID)
-        export ARM_CLIENT_ID=$(ARM_CLIENT_ID)
-        export ARM_CLIENT_SECRET=$(ARM_CLIENT_SECRET))
+        # Export Azure credentials for Terraform
+        export ARM_CLIENT_ID=$servicePrincipalId
+        export ARM_CLIENT_SECRET=$servicePrincipalKey
+        export ARM_TENANT_ID=$tenantId
+        export ARM_SUBSCRIPTION_ID=$(az account show --query id -o tsv)
         export DATABRICKS_HOST=${{ parameters.databricksHost }}
         
         # Plan Terraform changes
         cd $(System.DefaultWorkingDirectory)
         terraform plan \
-        -var="orca_catalog=${{ parameters.orcaCatalog }}" \
-        -var="orca_metadata_schema=${{ parameters.orcaMetadataSchema }}" \
-        -var="orca_runtime_schema=${{ parameters.orcaRuntimeSchema }}" \
-        -var="bronze_catalog=${{ parameters.bronzeCatalog }}" \
-        -var="silver_catalog=${{ parameters.silverCatalog }}" \
-        -var="gold_catalog=${{ parameters.goldCatalog }}" \
-        -var="platinum_catalog=${{ parameters.platinumCatalog }}" \
-        -var="environment=${{ parameters.environment }}" \
-        -var="enable_cdf_for_runtime=${{ parameters.enableCdfForRuntime }}" \
-        -var="enable_cdf_for_metadata=${{ parameters.enableCdfForMetadata }}" \
-        -var="storage_account_name=${{ parameters.storageAccountName }}" \
-        -var="storage_connector_id=${{ parameters.storageConnectorId }}" \
-        -var="ad_group_environment=${{ parameters.adGroupEnvironment }}" \
-        -out=tfplan
+          -var="orca_catalog=${{ parameters.orcaCatalog }}" \
+          -var="orca_metadata_schema=${{ parameters.orcaMetadataSchema }}" \
+          -var="orca_runtime_schema=${{ parameters.orcaRuntimeSchema }}" \
+          -var="bronze_catalog=${{ parameters.bronzeCatalog }}" \
+          -var="silver_catalog=${{ parameters.silverCatalog }}" \
+          -var="gold_catalog=${{ parameters.goldCatalog }}" \
+          -var="platinum_catalog=${{ parameters.platinumCatalog }}" \
+          -var="environment=${{ parameters.environment }}" \
+          -var="enable_cdf_for_runtime=${{ parameters.enableCdfForRuntime }}" \
+          -var="enable_cdf_for_metadata=${{ parameters.enableCdfForMetadata }}" \
+          -var="storage_account_name=${{ parameters.storageAccountName }}" \
+          -var="storage_connector_id=${{ parameters.storageConnectorId }}" \
+          -var="ad_group_environment=${{ parameters.adGroupEnvironment }}" \
+          -out=tfplan
 
 
 #  - script: |
