--- a/azure-pipelines/templates/terraform-deploy-steps.yml
+++ b/azure-pipelines/templates/terraform-deploy-steps.yml
@@ -79,13 +79,7 @@ steps:
         export ARM_CLIENT_SECRET=$servicePrincipalKey
         export ARM_TENANT_ID=$tenantId
         export ARM_SUBSCRIPTION_ID=$(az account show --query id -o tsv)
-        
-        # Set environment variables for subsequent tasks
-        echo "##vso[task.setvariable variable=DATABRICKS_HOST]${{ parameters.databricksHost }}"
-        echo "##vso[task.setvariable variable=ARM_CLIENT_ID]$servicePrincipalId"
-        echo "##vso[task.setvariable variable=ARM_CLIENT_SECRET]$servicePrincipalKey"
-        echo "##vso[task.setvariable variable=ARM_TENANT_ID]$tenantId"
-        echo "##vso[task.setvariable variable=ARM_SUBSCRIPTION_ID]$(az account show --query id -o tsv)"
+        export ARM_USE_CLI=false
         
         # Log configuration (without sensitive data)
         echo "Environment: ${{ parameters.environment }}"
