--- a/azure-pipelines/templates/terraform-deploy-steps.yml
+++ b/azure-pipelines/templates/terraform-deploy-steps.yml
@@ -109,6 +109,7 @@ steps:
         export ARM_CLIENT_SECRET=$servicePrincipalKey
         export ARM_TENANT_ID=$tenantId
         export ARM_SUBSCRIPTION_ID=$(az account show --query id -o tsv)
+        export ARM_USE_CLI=false
         export DATABRICKS_HOST=${{ parameters.databricksHost }}
         
         # Validate Terraform configuration
@@ -128,6 +129,7 @@ steps:
         export ARM_CLIENT_SECRET=$servicePrincipalKey
         export ARM_TENANT_ID=$tenantId
         export ARM_SUBSCRIPTION_ID=$(az account show --query id -o tsv)
+        export ARM_USE_CLI=false
         export DATABRICKS_HOST=${{ parameters.databricksHost }}
         
         # Plan Terraform changes
