--- a/azure-pipelines/templates/terraform-deploy-steps.yml
+++ b/azure-pipelines/templates/terraform-deploy-steps.yml
@@ -67,88 +67,82 @@ steps:
       TERRAFORM_VERSION: $(terraformVersion)
 
   - task: AzureCLI@2
-    displayName: 'Setup Databricks Authentication'
+    displayName: 'Export Azure Credentials for Terraform'
     inputs:
       azureSubscription: ${{ parameters.serviceConnection }}
       addSpnToEnvironment: true
       scriptType: 'bash'
       scriptLocation: 'inlineScript'
       inlineScript: |
-        # Export Azure credentials for Terraform - using service principal, not MSI
-        export ARM_CLIENT_ID=$servicePrincipalId
-        export ARM_CLIENT_SECRET=$servicePrincipalKey
-        export ARM_TENANT_ID=$tenantId
-        export ARM_SUBSCRIPTION_ID=$(az account show --query id -o tsv)
-        export ARM_USE_CLI=false
+        # Export Azure credentials as pipeline variables for subsequent tasks
+        echo "##vso[task.setvariable variable=ARM_CLIENT_ID]$servicePrincipalId"
+        echo "##vso[task.setvariable variable=ARM_CLIENT_SECRET;issecret=true]$servicePrincipalKey"
+        echo "##vso[task.setvariable variable=ARM_TENANT_ID]$tenantId"
+        echo "##vso[task.setvariable variable=ARM_SUBSCRIPTION_ID]$(az account show --query id -o tsv)"
+        echo "##vso[task.setvariable variable=DATABRICKS_HOST]${{ parameters.databricksHost }}"
         
         # Log configuration (without sensitive data)
         echo "Environment: ${{ parameters.environment }}"
         echo "Backend Storage: $(terraform_storage_account)"
         echo "Backend Container: $(terraform_container)"
         echo "Backend RG: $(terraform_resource_group)"
-        
-        # Initialize Terraform with Azure backend
-        echo "Initializing Terraform with Azure backend..."
-        cd $(System.DefaultWorkingDirectory)
-        terraform init \
-          -backend-config="resource_group_name=$(terraform_resource_group)" \
-          -backend-config="storage_account_name=$(terraform_storage_account)" \
-          -backend-config="container_name=$(terraform_container)" \
-          -backend-config="key=orca-ddl/${{ parameters.environment }}/terraform.tfstate"
+        echo "Databricks Host: ${{ parameters.databricksHost }}"
+  
+  - script: |
+      # Initialize Terraform with Azure backend using exported credentials
+      echo "Initializing Terraform..."
+      terraform init \
+        -backend-config="resource_group_name=$(terraform_resource_group)" \
+        -backend-config="storage_account_name=$(terraform_storage_account)" \
+        -backend-config="container_name=$(terraform_container)" \
+        -backend-config="key=orca-ddl/${{ parameters.environment }}/terraform.tfstate"
+    displayName: 'Terraform Init'
+    workingDirectory: $(System.DefaultWorkingDirectory)
+    env:
+      ARM_CLIENT_ID: $(ARM_CLIENT_ID)
+      ARM_CLIENT_SECRET: $(ARM_CLIENT_SECRET)
+      ARM_TENANT_ID: $(ARM_TENANT_ID)
+      ARM_SUBSCRIPTION_ID: $(ARM_SUBSCRIPTION_ID)
 
-  - task: AzureCLI@2
+  - script: |
+      # Validate Terraform configuration
+      echo "Validating Terraform configuration..."
+      terraform validate
     displayName: 'Terraform Validate'
-    inputs:
-      azureSubscription: ${{ parameters.serviceConnection }}
-      addSpnToEnvironment: true
-      scriptType: 'bash'
-      scriptLocation: 'inlineScript'
-      inlineScript: |
-        # Export Azure credentials for Terraform
-        export ARM_CLIENT_ID=$servicePrincipalId
-        export ARM_CLIENT_SECRET=$servicePrincipalKey
-        export ARM_TENANT_ID=$tenantId
-        export ARM_SUBSCRIPTION_ID=$(az account show --query id -o tsv)
-        export ARM_USE_CLI=false
-        export DATABRICKS_HOST=${{ parameters.databricksHost }}
-        
-        # Validate Terraform configuration
-        cd $(System.DefaultWorkingDirectory)
-        terraform validate
+    workingDirectory: $(System.DefaultWorkingDirectory)
+    env:
+      ARM_CLIENT_ID: $(ARM_CLIENT_ID)
+      ARM_CLIENT_SECRET: $(ARM_CLIENT_SECRET)
+      ARM_TENANT_ID: $(ARM_TENANT_ID)
+      ARM_SUBSCRIPTION_ID: $(ARM_SUBSCRIPTION_ID)
+      DATABRICKS_HOST: $(DATABRICKS_HOST)
 
-  - task: AzureCLI@2
+  - script: |
+      # Plan Terraform changes
+      echo "Planning Terraform changes..."
+      terraform plan \
+        -var="orca_catalog=${{ parameters.orcaCatalog }}" \
+        -var="orca_metadata_schema=${{ parameters.orcaMetadataSchema }}" \
+        -var="orca_runtime_schema=${{ parameters.orcaRuntimeSchema }}" \
+        -var="bronze_catalog=${{ parameters.bronzeCatalog }}" \
+        -var="silver_catalog=${{ parameters.silverCatalog }}" \
+        -var="gold_catalog=${{ parameters.goldCatalog }}" \
+        -var="platinum_catalog=${{ parameters.platinumCatalog }}" \
+        -var="environment=${{ parameters.environment }}" \
+        -var="enable_cdf_for_runtime=${{ parameters.enableCdfForRuntime }}" \
+        -var="enable_cdf_for_metadata=${{ parameters.enableCdfForMetadata }}" \
+        -var="storage_account_name=${{ parameters.storageAccountName }}" \
+        -var="storage_connector_id=${{ parameters.storageConnectorId }}" \
+        -var="ad_group_environment=${{ parameters.adGroupEnvironment }}" \
+        -out=tfplan
     displayName: 'Terraform Plan'
-    inputs:
-      azureSubscription: ${{ parameters.serviceConnection }}
-      addSpnToEnvironment: true
-      scriptType: 'bash'
-      scriptLocation: 'inlineScript'
-      inlineScript: |
-        # Export Azure credentials for Terraform
-        export ARM_CLIENT_ID=$servicePrincipalId
-        export ARM_CLIENT_SECRET=$servicePrincipalKey
-        export ARM_TENANT_ID=$tenantId
-        export ARM_SUBSCRIPTION_ID=$(az account show --query id -o tsv)
-        export ARM_USE_CLI=false
-        export DATABRICKS_HOST=${{ parameters.databricksHost }}
-        
-        # Plan Terraform changes
-        cd $(System.DefaultWorkingDirectory)
-        terraform plan \
-          -var="orca_catalog=${{ parameters.orcaCatalog }}" \
-          -var="orca_metadata_schema=${{ parameters.orcaMetadataSchema }}" \
-          -var="orca_runtime_schema=${{ parameters.orcaRuntimeSchema }}" \
-          -var="bronze_catalog=${{ parameters.bronzeCatalog }}" \
-          -var="silver_catalog=${{ parameters.silverCatalog }}" \
-          -var="gold_catalog=${{ parameters.goldCatalog }}" \
-          -var="platinum_catalog=${{ parameters.platinumCatalog }}" \
-          -var="environment=${{ parameters.environment }}" \
-          -var="enable_cdf_for_runtime=${{ parameters.enableCdfForRuntime }}" \
-          -var="enable_cdf_for_metadata=${{ parameters.enableCdfForMetadata }}" \
-          -var="storage_account_name=${{ parameters.storageAccountName }}" \
-          -var="storage_connector_id=${{ parameters.storageConnectorId }}" \
-          -var="ad_group_environment=${{ parameters.adGroupEnvironment }}" \
-          -out=tfplan
+    workingDirectory: $(System.DefaultWorkingDirectory)
+    env:
+      ARM_CLIENT_ID: $(ARM_CLIENT_ID)
+      ARM_CLIENT_SECRET: $(ARM_CLIENT_SECRET)
+      ARM_TENANT_ID: $(ARM_TENANT_ID)
+      ARM_SUBSCRIPTION_ID: $(ARM_SUBSCRIPTION_ID)
+      DATABRICKS_HOST: $(DATABRICKS_HOST)
 
 
 #  - script: |
